# Saola-Dock

./: .gitignore  README.md  index.html  package-lock.json  package.json
scripts/: browser-server.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: browser_profiles.rs  lib.rs  main.rs
src/components/: browser-profiles-panel.tsx
src/store/: app-store.ts
