[package]
name = "saola-dock"
version = "0.1.0"
description = "Saola Dock — Browser Profile Manager"
authors = ["nguyennghia"]
edition = "2021"

[lib]
name = "saola_dock_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
